# EmberEngine

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  runEditor.sh  runRuntime.sh
Ember/: CMakeLists.txt
Ember/res/shaders/: flat.frag  flat.vert  shader.frag  shader.vert
Ember/src/: Ember.h  EmberEntrypoint.h
Ember/src/Core/: Application.cpp  Application.h  GUID.h  Input.cpp  Input.h  Logger.cpp  Logger.h  Serialization.h  Utils.h  Window.cpp  Window.h
Ember/src/Core/Events/: EventDispatcher.h  Events.h  IEvent.h  KeyEvents.h  MouseEvents.h  PhysicsEvents.h  ProjectEvents.h  RenderEvents.h  WindowEvents.h
Ember/src/Core/Layers/: ILayer.h  LayerStack.cpp  LayerStack.h  PhysicsLayer.cpp  PhysicsLayer.h  RenderLayer.cpp  RenderLayer.h
Ember/src/Physics/: Conversions.h  IPhysicsBackend.h  PhysicsFactory.h
Ember/src/Physics/react/: ReactPhysics.cpp  ReactPhysics.h
Ember/src/Project/: FileTypes.h  ProjectManager.cpp  ProjectManager.h
Ember/src/Project/Assets/: AssetDatabase.cpp  AssetDatabase.h  AssetHandle.h  AssetImporter.cpp  AssetImporter.h  AssetManager.cpp  AssetManager.h  AssetMeta.h  AssetPool.h  AssetRegistry.cpp  AssetRegistry.h  AssetType.h  Assets.h  EngineAssetLoader.cpp  EngineAssetLoader.h  ProjectAssetLoader.cpp  ProjectAssetLoader.h
Ember/src/Project/Scene/: Components.h  ComponentsSerialization.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Ember/src/Renderer/: RenderContext.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.cpp
Ember/src/Renderer/Buffers/: EBO.h  UBO.h  VAO.h  VBO.h
EmberEditor/: CMakeLists.txt
EmberEditor/res/icons/: folder.png.embermeta  mat.png.embermeta  null_texture.jpg.embermeta  obj.png.embermeta  png.png.embermeta  unknown.png.embermeta
EmberEditor/src/: EditorAssetLoader.cpp  EditorAssetLoader.h  EditorLayer.cpp  EditorLayer.h  EditorMain.cpp  EditorState.h  ImGuiFontRegistry.h
EmberEditor/src/EditorPanels/: EditorHelpers.h  IEditorPanel.h  Panels.h
EmberEditor/src/EditorPanels/AssetRegistryPanel/: AssetRegistryPanel.cpp  AssetRegistryPanel.h
EmberEditor/src/EditorPanels/EditorPanel/: EditorPanel.cpp  EditorPanel.h
EmberEditor/src/EditorPanels/GameViewPanel/: GameViewPanel.cpp  GameViewPanel.h
EmberEditor/src/EditorPanels/HierarchyPanel/: HierarchyPanel.cpp  HierarchyPanel.h
EmberEditor/src/EditorPanels/InspectorPanel/: Inspector.h  InspectorPanel.cpp  InspectorPanel.h
EmberRuntime/: CMakeLists.txt
(+53 files in other folders)
